全局token配置，cloud集成swagger2  其他一些修改

--- a/core-service/src/main/resources/bootstrap.yml
+++ b/core-service/src/main/resources/bootstrap.yml
@@ -65,7 +65,13 @@ spring:
   jackson:
     default-property-inclusion: use_defaults
 
-
+gmsj:
+  security:
+    token:
+      secret: Z21zajIwMTcxMmRhdGF2aXN1YWw=
+eureka:
+  instance:
+    status-page-url: http://localhost:${server.port}/swagger-ui.html
 
 
 
