--- a/core-service/src/main/resources/generator/config.properties
+++ b/core-service/src/main/resources/generator/config.properties
@@ -1,8 +1,9 @@
 # 数据库配置
-jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://39.106.100.238:3306/loan_cigarette
-jdbc.user=app
-jdbc.password=12345678
+jdbc.driverClass = com.mysql.jdbc.Driver
+jdbc.url = jdbc:mysql://47.95.218.37:3306/visualization?characterEncoding=utf8&useSSL=false
+jdbc.user = app
+jdbc.password = Gmsj@2017
+
 #c3p0
 jdbc.maxPoolSize=50
 jdbc.minPoolSize=10
